--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Grandes proyectos desde la perspectiva de una pequeña empresa II: cómo retenerlos</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -24,8 +24,209 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>Grandes proyectos desde la perspectiva de una pequeña empresa II: Cómo retenerlos</h1>
+					<h3>DrupalCamp Spain 2017</h3>
+					<p>
+						<small>Por <a href="https://www.drupal.org/u/rvilar">Ramon Vilar</a> / <a href="http://twitter.com/rvilar">@rvilar</a></small>
+					</p>
+				</section>
+
+				<section>
+					<h2>Sobre mi</h2>
+					<img src="images/ramon.jpg" style="width: 300px; float: left" alt="Me" />
+          <h3 style="text-transform: none; padding-top: 60px">Ramon Vilar</h3>
+          <p><a href="http://twitter.com/rvilar">@rvilar</a></p>
+          <p><a href="http://ymbra.com">http://ymbra.com</a></p>
+          <img src="images/logo.png" alt="Ymbra" style="width: 350px; background: #fff" />
+				</section>
+
+				<section>
+					<h2>Índice</h2>
+					<ol>
+						<li>Contexto</li>
+						<li>Resumen</li>
+						<li>Día 0</li>
+						<li>6 meses después</li>
+						<li>Implicaciones de la retención</li>
+					</ol>
+				</section>
+
+				<section>
+					<section>
+						<h2>Contexto</h2>
+					</section>
+					<section>
+						<h2>Segundas partes...</h2>
+						<ul>
+							<li>En la DrupalCamp 2016 hablé sobre <a href="https://2016.drupalcamp.es/en/sessions/ganar-y-entregar-grandes-proyectos-desde-la-perspectiva-de-una-peque%C3%B1a-empresa.html">cómo conseguir proyectos desde la óptica de empresa pequeña</a></li>
+							<li>Debido al interés surgido del tema, nace la segunda parte</li>
+							<li class="fragment">Terminado el proyecto...ahora qué?</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Resumen</h2>
+					</section>
+					<section>
+						<h2>Conceptos</h2>
+						<dl>
+							<dt>Empresa pequeña</dt>
+							<dd>10 personas, multifuncional, horizontal</dd>
+							<dt>Tipo de equipo</dt>
+							<dd>Generalista - Enfocado a servicios</dd>
+							<dt>Venta</dt>
+							<dd>Puerta fría - especialización - referente</dd>
+						</dl>
+					</section>
+					<section>
+						<h2>Impacto en tu organización</h2>
+						<dl>
+							<dt>Equipo</dt>
+							<dd>MIT - Motivación - Involucración - Cambio de proyectos</dd>
+							<dt>Capacidad</dt>
+							<dd>Dinamiza tamaño equipo - red de colaboradores</dd>
+							<dt>Finanzas</dt>
+							<dd>Fasear pagos</dd>
+						</dl>
+					</section>
+					<section>
+						<h2>Conclusiones</h2>
+						<ul>
+							<li>Esto no es un TODO, es una receta</li>
+							<li>Cuida a tu equipo</li>
+							<li>Trata de humanizar la relación con tu cliente</li>
+							<li>El departamento de IT será mejor para entrar que no el de marketing</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Día 0: cierre de proyecto</h2>
+					</section>
+					<section>
+						<h2>Definamos</h2>
+						<p>Cierre de proyecto es el cierre administrativo</p>
+						<p class="fragment">Suele coincidir con la factura final</p>
+						<p class="fragment">Es el momento de iniciar el trabajo a futuro</p>
+					</section>
+					<section>
+						<h2>Día 0: equipo</h2>
+						<p>Empieza la fase del bugfixing en producción</p>
+						<p>Es el momento de desmantelar el equipo</p>
+						<p>Es bueno irlo planificando con tiempo para preveer impactos emocionales tanto en el equipo como en el cliente</p>
+					</section>
+					<section>
+						<h2>Día 0: caja</h2>
+						<ul>
+							<li>Pago a final de proyecto?</li>
+							<li>Cuidado con el vencimiento</li>
+							<li>Momento de cuadrar números (control del coste de proyecto)</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Día 0: preventa</h2>
+						<ul>
+							<li>Si nos interesa, hablar de fase 2</li>
+							<li class="fragment">Mantenimiento evolutivo</li>
+							<li class="fragment">Mantenimiento de seguridad</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>6 meses después: retención</h2>
+					</section>
+					<section>
+						<h2>Mantenimiento</h2>
+						<ul>
+							<li>La forma más fácil de retención</li>
+							<li>Flujo de caja controlado</li>
+							<li>No ganas mucho pero lo tienes bajo control</li>
+							<li class="fragment">¿Equipo dedicado?</li>
+						</ul>
+					</section>
+					<section>
+						<h2>El segundo proyecto</h2>
+						<ul>
+							<li>Jugar la baza del conocimiento del entorno</li>
+							<li>Intentar introducir una pieza más de tu metodología</li>
+							<li>Exigir libertad de movimientos</li>
+						</ul>
+					</section>
+					<section>
+						<h2>ADN Ymbra</h2>
+						<ul>
+							<li>Si se ha quedado contigo, es por algo</li>
+							<li>Una vez demuestras lo que vales...ahora exige tus normas</li>
+							<li>Da un paso más en llevar al cliente a tu terreno</li>
+							<li>Muéstrale un poco más tu potencial (pero guarda alguna carta)</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Implicaciones de la retención</h2>
+					</section>
+					<section>
+						<h2>Para el cliente</h2>
+						<ul>
+							<li>Puede sentirse estancado</li>
+							<li>Miedo a poner todos los huevos en la misma cesta</li>
+							<li class="fragment">Sinceridad ante todo</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Para la empresa</h2>
+						<ul>
+							<li>Colapso del equipo por un cliente</li>
+							<li>Miedo a recibir todos los huevos de la misma gallina</li>
+							<li class="fragment">Crecimiento escalonado del equipo/empresa</li>
+							<li class="fragment">¡Diversifica!</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Para el equipo</h2>
+						<ul>
+							<li>Cansancio del mismo entorno</li>
+							<li>Riesgo de captación por parte del cliente</li>
+							<li>Es bueno rotar equipos aunque mantener siempre personas de referencia</li>
+							<li>Explicar al cliente las bondades de la rotación interna</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Para la caja</h2>
+						<ul>
+							<li>Si los tiempos de pago son largos, pueden colapsar caja</li>
+							<li>Control exhaustivo de los tiempos</li>
+							<li>Diversificar origen de flujo de caja</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<h2>Conclusiones</h2>
+					<ul>
+						<li>Es bueno tener siempre estos clientes</li>
+						<li>Nos aportan nombre y trabajo</li>
+						<li>Diversificar</li>
+						<li>Ir marcando terreno en el cliente</li>
+						<li>Cuidar al equipo, ante todo!</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Muchas gracias por vuestro tiempo!</h2>
+					<h3 style="text-transform: none; padding-top: 60px">Ramon Vilar</h3>
+          <p><a href="http://twitter.com/rvilar">@rvilar</a></p>
+          <p><a href="http://ymbra.com">http://ymbra.com</a></p>
+          <img src="images/logo.png" alt="Ymbra" style="width: 350px; background: #fff" />
+				</section>
 			</div>
 		</div>
 
